fix(variables): remove extra padding

--- a/packages/components/ng-ovh-sidebar-menu/src/_variables.less
+++ b/packages/components/ng-ovh-sidebar-menu/src/_variables.less
@@ -39,6 +39,7 @@
 
 // Actions - Menu
 @sidebar-actions-menu-margin: 0;
+@sidebar-actions-menu-padding: 0;
 @sidebar-actions-menu-border-color: #bbbdbf;
 @sidebar-actions-menu-border-width: 1px;
 
